--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-merlot
-remote_theme: pages-themes/merlot@v0.2.0
+remote_theme: pages-themes/slate@v0.2.0
 plugins:
-- jekyll-remote-theme 
+- jekyll-remote-theme
